fix/Add z-index: 100 to 'sticky__container' - #3

--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,7 @@ body {
   width: 100%;
   height: 106px;
   background-color: var(--header-background-color);
+  z-index: 100;
 }
 
 .sticky__top-container {
